add gov sample app

--- a/docker/markdowns/0705.md
+++ b/docker/markdowns/0705.md
@@ -2,13 +2,31 @@
 
 暑期加入了沃天宇老师的实验室进行暑期的实习。在正式开始工作之前，师兄先让我了解一下技术栈，需要了解的有docker、k8s、springboot、springcloud。
 
-仅以一系列博客记录一下自己学习的笔记。更多内容见[Github]()
+仅以一系列博客记录一下自己学习的笔记。更多内容见[Github](https://github.com/SnowPhoenix0105/BackEndLearning)
 
 
 
-## 资料
+## 参考资料
 
 * docker官网: [https://www.docker.com/](https://www.docker.com/)
 * 菜鸟教程: [https://www.runoob.com/docker/docker-tutorial.html](https://www.runoob.com/docker/docker-tutorial.html)
 * docker中文社区: [https://www.docker.org.cn/](https://www.docker.org.cn/)
 
+
+## 什么是docker？
+
+在开始学习之前，先连带猜测给docker下一个定义，深入学习之后再回头来验证一下。
+
+docker的作用应当是解决程序的环境问题，通过将环境和程序一起打包，使得能够方便地在不同计算机上恢复程序所需要的环境并运行程序。
+
+这将解决开发过程中的环境不一致问题，大大降低部署时的环境问题。
+
+相比于虚拟机，docker应当具有较高的效率和较低的代价。
+
+
+## 安装
+
+Linux参考：[https://docs.docker.com/engine/install/](https://docs.docker.com/engine/install/)
+Windows参考：[https://docs.docker.com/docker-for-windows/install/]
+
+## 
