finish thinking after Build

--- a/docker/markdowns/0705.md
+++ b/docker/markdowns/0705.md
@@ -31,7 +31,11 @@ Windows参考：[https://docs.docker.com/docker-for-windows/install/]
 
 ## demo
 
+### 下载
+
 首先，下载官方的[示例app](https://github.com/docker/getting-started/tree/master/app)，将仓库中多余部分删除，保留app文件夹，并重命名为[gov-sample-app](../gov-sample-app)。
+
+### Dockerfile
 
 创建[Dockerfile](../gov-sample-app/Dockerfile):
 
@@ -49,7 +53,7 @@ CMD ["node", "src/index.js"]
 2. 第二句，`RUN`，应当是指定了一些需要使用的包，到这一步应当也是下载安装，作用应当是作为第一句引入的image的补充，添补额外的应用；
 3. 第三句，看起来应当是指定一个运行目录，但是这个目录是容器内的目录还是
 
-
+### Build
 
 然后切换到`gov-sample-app`文件夹下运行：
 
@@ -72,6 +76,7 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 
 虽然还是有些慢，但是好多了。最后Build成功，以下为输出：
 
+第一次Biuld：
 ```console
 $ sudo docker build -t getting-started .
 Sending build context to Docker daemon  4.659MB
@@ -134,6 +139,52 @@ Step 7/7 : CMD ["node", "src/index.js"]
 Removing intermediate container 05444490086d
  ---> 302e7c6b161a
 Successfully built 302e7c6b161a
+Successfully tagged getting-started:latest
+```
+
+到此，我们知道了，docker是需要一个os的，而一个常用的选择就是轻量的Linux发行版`Alpine`。我们通过`Dockerfile`来指定一个镜像如何打包，其中`FROM`指令来指定一个初始的镜像，类似于OOP中的继承，我们在这个镜像的基础上，通过一系列指令来丰富其内容，创建我们的镜像。
+
+但是，仍旧有遗留的问题：
+1. `RUN`和`CMD`有什么区别，它们的参数看起来都是在`Alpine`中运行的指令，这里的示例中它们采用了不同的格式，前者为shell格式，后者为exec格式，但是我试验后发现，将其格式对调，没有任何报错；
+2. `COPY`到底拷贝了什么；
+3. `WORKDIR`是哪儿来的？目前来看，官方包里的示例代码就是在`app`文件夹下，但是我这里将其改名为`gov-sample-app`，但是Build阶段并没有报错；
+4. Build结束后应当有一个image，但是我并没有在文件夹中看到新的文件，这个镜像保存在哪里了？
+5. 在试验遗留问题（1）的时候，我发现此时执行Build时，让我之前头疼的`apk add`的过程被跳过了，直接`Using cache`，并且可以发现，我只改动了Step6和7，对于前面的5步，除`FROM`和`COPY`外，都直接`Using cache`了，看来docker似乎是对Dockerfile中的大部分步骤都一步一步地进行了cache，这是怎么实现的？
+
+第二次Build：
+```
+sudo docker build -t getting-started .
+Sending build context to Docker daemon  4.659MB
+Step 1/7 : FROM node:12-alpine
+ ---> deeae3752431
+Step 2/7 : RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
+ ---> Using cache
+ ---> 306dcbb9fb1b
+Step 3/7 : RUN apk add --no-cache python g++ make
+ ---> Using cache
+ ---> 30167547cd72
+Step 4/7 : WORKDIR /app
+ ---> Using cache
+ ---> 9b4f5c2f993f
+Step 5/7 : COPY . .
+ ---> fb639ed69103
+Step 6/7 : RUN ["yarn", "install", "--production"]
+ ---> Running in 3bd8d313084f
+yarn install v1.22.5
+[1/4] Resolving packages...
+[2/4] Fetching packages...
+info fsevents@1.2.9: The platform "linux" is incompatible with this module.
+info "fsevents@1.2.9" is an optional dependency and failed compatibility check. Excluding it from installation.
+[3/4] Linking dependencies...
+[4/4] Building fresh packages...
+Done in 61.84s.
+Removing intermediate container 3bd8d313084f
+ ---> 9435838e03d2
+Step 7/7 : CMD node src/index.js
+ ---> Running in 49c60121400a
+Removing intermediate container 49c60121400a
+ ---> 7cb5bd6154b2
+Successfully built 7cb5bd6154b2
 Successfully tagged getting-started:latest
 ```
 
