--- a/docker/markdowns/0705.md
+++ b/docker/markdowns/0705.md
@@ -1,10 +1,11 @@
-# Docker学习笔记
+# Docker学习笔记（一）
 
 暑期加入了沃天宇老师的实验室进行暑期的实习。在正式开始工作之前，师兄先让我了解一下技术栈，需要了解的有docker、k8s、springboot、springcloud。
 
 仅以一系列博客记录一下自己学习的笔记。更多内容见[Github](https://github.com/SnowPhoenix0105/BackEndLearning)
 
 
+2021/7/5
 
 ## 参考资料
 
@@ -205,7 +206,7 @@ docker run -dp 3000:3000 getting-started
 
 访问3000端口即可看到这个程序已经启动起来了：
 
-<img src="./images/docker-sample-app-run-success.png" style="zoom: 20%">
+<img src="./images/docker-sample-app-run-success.png" style="zoom: 40%">
 
 通过`docker ps`命令可以查看已经启动的容器，然后通过`docker stop <CONTAINER ID>`来关闭已经detached的容器。
 
@@ -233,7 +234,7 @@ docker run -dp 3001:3000 getting-started
 
 可以看到更改生效了，而此时访问3000仍旧可以看到旧的未更改的app。
 
-<img src="./images/docker-sample-app-update-success.png" style="zoom: 20%">
+<img src="./images/docker-sample-app-update-success.png" style="zoom: 40%">
 
 此时，我们有以下这些命令：
 
@@ -291,7 +292,7 @@ docker ps -a
 
 首先，注册一个[DockerHub](https://hub.docker.com/)账号，登录并创建一个新的仓库：
 
-<img src="./images/docker-hub-new-repo.png" style="zoom: 20%">
+<img src="./images/docker-hub-new-repo.png" style="zoom: 40%">
 
 然后通过
 
