finish best practice

--- a/docker/markdowns/0706.md
+++ b/docker/markdowns/0706.md
@@ -217,3 +217,328 @@ docker container logs <CONTAINER>
 我们的更改已经生效了。通过bind-mount方式，我们在本地的更改能够影响到容器内的文件。
 
 
+
+## 多容器协作
+
+我们使用容器的时候，应当尽量地解耦，多个应用（如数据库）最好能够运行在不同的容器中，这样能够更加灵活地进行部署和使用。
+
+而当我们将不同应用部署于不同容器后，我们怎样让它们进行协作呢？答案是网络。这一点和现在分布式的微服务架构的思想有些类似。
+
+### 启动MySQL
+
+首先，创建一个网络network，这个命令与创建一个volume很类似：
+
+```powershell
+docker network create todo-app
+```
+
+然后，启动一个MySQL镜像的容器：
+
+```powershell
+docker run -d --network todo-app --network-alias mysql -v todo-mysql-data:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=secret -e MYSQL_DATABASE=todos mysql:5.7
+```
+
+* `-d`表示detached模式运行，老朋友了；
+* `--network`表示这个容器需要连接到我们刚创建的`todo-app`网络；
+* `--network-alias`表示为这个容器所在的ID起了一个“域名”，在同一个network的其它容器可以通过DNS来找到这个容器；
+* `-v`表示进行文件系统的volume映射，注意这里我们使用了一个名为todo-mysql-data的volume，但我们从未创建过它，事实上，docker将为我们自动创建；
+* `-e`用来添加环境变量；
+* `mysql:5.7`使我们使用的镜像，我们一般会省略冒号后面的标签，此时缺省的标签为`latest`，这里我们指定了这个标签；
+
+通过`exec`我们可以进入容器查看状态：
+
+```
+docker exec -it <CONTAINER> mysql -u root -p
+```
+
+其中密码是之前通过环境变量指定的`secret`，通过`show databases`命令可以看到MySQL中现在有了我们通过环境变量指定的`todos`数据库。
+
+```
+mysql> show databases;
++--------------------+
+| Database           |
++--------------------+
+| information_schema |
+| mysql              |
+| performance_schema |
+| sys                |
+| todos              |
++--------------------+
+5 rows in set (0.01 sec)
+```
+
+### 启动netshoot
+
+netshoot是一个docker/k8s常用的debug工具，用于定位和发现问题的工具箱。详见：[https://github.com/nicolaka/netshoot](https://github.com/nicolaka/netshoot)。
+
+```powershell
+docker run -it --network todo-app nicolaka/netshoot
+```
+
+以交互模式启动netshoot并且将其添加到todo-app中，即和MySQL位于同一网络中。
+
+这里我们使用netshoot的dig命令，这是一个DNS工具，我们获得了如下结果：
+
+```netshoot
+06dfbe6b6d3e  ~  dig mysql
+
+; <<>> DiG 9.16.16 <<>> mysql
+;; global options: +cmd
+;; Got answer:
+;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 20457
+;; flags: qr rd ra; QUERY: 1, ANSWER: 1, AUTHORITY: 0, ADDITIONAL: 0
+
+;; QUESTION SECTION:
+;mysql.                         IN      A
+
+;; ANSWER SECTION:
+mysql.                  600     IN      A       172.18.0.2
+
+;; Query time: 0 msec
+;; SERVER: 127.0.0.11#53(127.0.0.11)
+;; WHEN: Tue Jul 06 14:11:27 UTC 2021
+;; MSG SIZE  rcvd: 44
+```
+
+可见通过我们在启动MySQL时指定的`--network-alias`，成功地添加了一个DNS信息，使得通过`mysql`域名可以寻找到MySQL容器中的数据库服务。
+
+
+### 利用MySQL作为数据库启动原来的项目
+
+```powershell
+docker run -dp 3000:3000 `
+   -w /app -v "$(pwd):/app" `
+   --network todo-app `
+   -e MYSQL_HOST=mysql `
+   -e MYSQL_USER=root `
+   -e MYSQL_PASSWORD=secret `
+   -e MYSQL_DB=todos `
+   node:12-alpine `
+   sh -c "yarn install && yarn run dev"
+```
+
+我们这里定义了很多环境变量，通过这些环境变量，我们可以将数据库从sqlite切换到MySQL。
+
+我们可以通过`docker container logs`来查看stdout，可以看到其中包含一下输出：
+
+```
+Waiting for mysql:3306.
+Connected!
+Connected to mysql db at host mysql
+```
+
+这说明通过我们设定的MySQL的域名`mysql`连接到了之前的MySQL的容器。
+
+访问`localhost:3000`，添加一个TODO：
+
+<img src="./images/docker-network-add-item-success.png" style="zoom: 40%">
+
+然后通过`docker exec`进入到MySQL的容器中，可以看到我们的这条信息成功添加到了数据库：
+
+```
+mysql> select * from todo_items;
++--------------------------------------+--------+-----------+
+| id                                   | name   | completed |
++--------------------------------------+--------+-----------+
+| ffb87e95-b514-4c33-937c-caee9bcbb5a5 | hellow |         0 |
++--------------------------------------+--------+-----------+
+1 row in set (0.00 sec)
+```
+
+## Docker Compose
+
+`Docker Compose`是一个多容器docker项目的管理工具，通过yml文件来定义每一个容器（服务启动的参数）。
+
+在`gov-sample-app`文件夹下创建`docker-compose.yml`，然后写上如下内容：
+
+```yml
+version: "3.7"
+
+services:
+  app:
+    image: node:12-alpine
+    command: sh -c "yarn install && yarn run dev"
+    ports:
+      - 3000:3000
+    working_dir: /app
+    volumes:
+      - ./:/app
+    environment:
+      MYSQL_HOST: mysql
+      MYSQL_USER: root
+      MYSQL_PASSWORD: secret
+      MYSQL_DB: todos
+
+  mysql:
+    image: mysql:5.7
+    volumes:
+      - todo-mysql-data:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_DATABASE: todos
+
+volumes:
+  todo-mysql-data:
+```
+
+再在`gov-sample-app`文件夹下输入:
+
+```powershell
+docker-compose up -d
+```
+
+即可实现启动一个MySQL服务再使用这个数据库启动我们的node.js服务程序。
+
+相比于在命令行手动启动这两个容器，这样的方式无疑更加方便，就如同手动调用gcc和编写Makefile使用make工具来构建一样。
+
+比较有意思的是，我们这次并没有让两个容器添加到同一个network中，它们还是实现了通讯，并且我们没有定义别名的情况下，node.js仍旧通过`mysql`这个名字路由到了MySQL的容器中。
+
+通过`docker network ls`我们可以发现有一个名为`gov-sample-app_default`的network被创建了。那么我们可以合理猜测，使用DockerCompose可以使得不同的服务自动添加到同一个defualt网络下，并且使用服务的名字来作为网络中的别名。
+
+此外，我在实验的时候，发现`docker compose`也是可以的（中间少了一个连接符），并且在PowerShell下显示效果更好。
+
+最后，输入`docker compose down`即可关闭所有容器。
+
+值得注意的是，通过DockerCompose创建的容器、Volume、network的名字都带有工程名作为前缀，也就是说即使在`docker-compose.yml`中指定了`volumes`为`todo-mysql-data`，实际上使用的却是`gov-sample-app_todo-mysql-data`。
+
+并且`docker compsoe down`默认是停止并删除所有容器、删除network（default被删除了，不知道其它的会不会被删除），但是**不删除**volume，除非带上`--volumes`选项。
+
+
+## 镜像构建的最佳实现
+
+这一部分来自官网。
+
+### 镜像安全扫描
+
+```poswershell
+docker scan <IMAGE>
+```
+
+该命令使用[Snyk](https://snyk.io/)对镜像进行扫描，并给出一些建议和提示。
+
+### 镜像层与缓存
+
+通过以下命令我们可以看到镜像的每一次更改：
+
+```powershell
+docker image history getting-started
+```
+
+```
+IMAGE          CREATED          CREATED BY                                      SIZE      COMMENT
+d46ea4c442cd   13 seconds ago   CMD ["/bin/sh" "-c" "node src/index.js"]        0B        buildkit.dockerfile.v0
+<missing>      13 seconds ago   RUN yarn install --production # buildkit        83.2MB    buildkit.dockerfile.v0
+<missing>      37 seconds ago   COPY . . # buildkit                             58.6MB    buildkit.dockerfile.v0
+<missing>      28 hours ago     WORKDIR /app                                    0B        buildkit.dockerfile.v0
+<missing>      28 hours ago     RUN /bin/sh -c apk add --no-cache python g++…   205MB     buildkit.dockerfile.v0
+<missing>      28 hours ago     RUN /bin/sh -c sed -i 's/dl-cdn.alpinelinux.…   93B       buildkit.dockerfile.v0
+<missing>      2 months ago     /bin/sh -c #(nop)  CMD ["node"]                 0B
+<missing>      2 months ago     /bin/sh -c #(nop)  ENTRYPOINT ["docker-entry…   0B        
+<missing>      2 months ago     /bin/sh -c #(nop) COPY file:238737301d473041…   116B
+<missing>      2 months ago     /bin/sh -c apk add --no-cache --virtual .bui…   7.62MB
+<missing>      2 months ago     /bin/sh -c #(nop)  ENV YARN_VERSION=1.22.5      0B
+<missing>      2 months ago     /bin/sh -c addgroup -g 1000 node     && addu…   75.7MB
+<missing>      2 months ago     /bin/sh -c #(nop)  ENV NODE_VERSION=12.22.1     0B
+<missing>      2 months ago     /bin/sh -c #(nop)  CMD ["/bin/sh"]              0B
+<missing>      2 months ago     /bin/sh -c #(nop) ADD file:282b9d56236cae296…   5.62MB
+```
+
+可以看到，大部分我们在`Dockerfile`中写下的命令，都对应着一次修改。而事实上，每一次修改，Docker都会创建一个新的层（Layer），这也能解释为什么我们之前在第二次`docker build`的时候，有些步骤没有实际执行，因为Docker为其建立了层，只要层的内容没有更改，就无须重新执行，只需要从以前的层那里开始构建即可。
+
+在这里，官方文档也给出了Dockerfile中`COPY`的作用：将宿主机中的文件拷贝至镜像中。`COPY`本身是无法被cache的，但是，如果`COPY`结束之后，镜像中的内容跟上一次是一样的，那么后面的几步仍旧可以使用之前的镜像层。
+
+这样，就有了最大化利用cache的方法：每次将构建的最小单元拷贝至镜像中，然后进行构建。比如先拷贝项目的依赖的清单，然后恢复项目依赖，然后再拷贝项目本体，然后构建项目，这样如果项目依赖的清单没有改动，则无需再次恢复项目依赖，事实上恢复项目依赖往往占据了大量构建镜像的时间。
+
+在`gov-sample-app`项目中，我们就可以先拷贝`package.json`和`yarn.lock`，然后进行`yarn install`，然后再拷贝整个项目。改造后如下（这里也注释掉了无用的`apk add`）：
+
+```Dockerfile
+# syntax=docker/dockerfile:1
+FROM node:12-alpine
+# RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories 
+# RUN apk add --no-cache python g++ make
+WORKDIR /app
+COPY package.json yarn.lock ./
+RUN yarn install --production
+COPY . .
+CMD node src/index.js
+```
+
+此外，因为我们曾经使用bind-mount直接修改了`gov-sample-app`文件夹，多了`node_modules`，我们这里要让docker忽略掉这个文件夹，我们需要像`.gitignore`那样，在`gov-sample-app`文件夹中创建`.dockerignore`文件并写入：
+
+```dockerignore
+node_modules
+```
+
+此时执行`docker build`，然后改动一下`src/static/index.html`（比如加个回车），再执行`docker build`，
+
+```powershell
+[+] Building 2.1s (12/12) FINISHED
+ => [internal] load build definition from Dockerfile                                           0.0s 
+ => => transferring dockerfile: 32B                                                            0.0s 
+ => [internal] load .dockerignore                                                              0.0s 
+ => => transferring context: 34B                                                               0.0s 
+ => resolve image config for docker.io/docker/dockerfile:1                                     1.3s 
+ => CACHED docker-image://docker.io/docker/dockerfile:1@sha256:e2a8561e419ab1ba6b2fe6cbdf49fd  0.0s 
+ => [internal] load metadata for docker.io/library/node:12-alpine                              0.0s 
+ => [1/5] FROM docker.io/library/node:12-alpine                                                0.0s 
+ => [internal] load build context                                                              0.1s 
+ => => transferring context: 3.46kB                                                            0.0s 
+ => CACHED [2/5] WORKDIR /app                                                                  0.0s 
+ => CACHED [3/5] COPY package.json yarn.lock ./                                                0.0s 
+ => CACHED [4/5] RUN yarn install --production                                                 0.0s 
+ => [5/5] COPY . .                                                                             0.1s 
+ => exporting to image                                                                         0.2s 
+ => => exporting layers                                                                        0.1s 
+ => => writing image sha256:ecad588cb07eb9a41fdfede453b0ef587b2afc70a40a7344f4f1ab1ad7b71597   0.0s 
+ => => naming to docker.io/library/getting-started                                             0.0s 
+```
+可以看到除了最后一步，全部使用了Cache。
+
+### 多个stage
+
+我们在构建的时候和我们部署在生产环境中的时候，往往需要不同的依赖，旧的方式会导致在最后的镜像中保留了构建工具，但事实上，这些构建工具应该像手脚架一样，结束构建就抛弃。
+
+这里就要再一次提到`FROM`语句，其完整格式为：
+
+```Dockerfile
+FROM <IMAGE> AS <STAGE>
+```
+
+每一个`FROM`语句是一个stage的开始，只有最后一个stage会被保留在最后的镜像中（可以通过`--target`参数来指定最后保留在镜像中的stage）。
+
+官方给了两个示例：
+
+* Maven+Tomcat：
+
+```Dockerfile
+# syntax=docker/dockerfile:1
+FROM maven AS build
+WORKDIR /app
+COPY . .
+RUN mvn package
+
+FROM tomcat
+COPY --from=build /app/target/file.war /usr/local/tomcat/webapps 
+```
+
+* React：
+
+```Dockerfile
+# syntax=docker/dockerfile:1
+FROM node:12 AS build
+WORKDIR /app
+COPY package* yarn.lock ./
+RUN yarn install
+COPY public ./public
+COPY src ./src
+RUN yarn run build
+
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
+```
+
+我们看到，在最后的一个stage中，`COPY`语句采用了`--from=build`来从其它stage拷贝文件，而不是宿主机。
+
+另一方面，在React这里使用了利用cache的优化操作，可见，即使不在最后的镜像中，应该也可以利用cache。
+
+
