finish learning of docker

--- a/docker/markdowns/0706.md
+++ b/docker/markdowns/0706.md
@@ -541,4 +541,46 @@ COPY --from=build /app/build /usr/share/nginx/html
 
 另一方面，在React这里使用了利用cache的优化操作，可见，即使不在最后的镜像中，应该也可以利用cache。
 
+## 总结
 
+后面的学习可能还会回头来使用docker，所以当前阶段的学习就先高一段落。
+
+先回顾开头的问题：什么是docker？
+
+用“容器”这个词来形容docker确实十分形象了，在Windows和macOS上运行需要一个Linux的虚拟机，其实从这里我们就可以合理推测出来了——docker应该是共享内核的。所有的镜像使用的应该是宿主机的Linux内核。虚拟机需要将方方面面与宿主机进行隔离，而docker只着重于“表层环境”（shell）的隔离。docker的出现，就是为了方便部署，在不同设备转移的时候携带一定的环境“闭包”，来避免重新安装环境。
+
+总的来说，docker就是一个用来装目标应用程序和其依赖的容器，我们可以方便地整个容器整个容器地移动、管理。
+
+docker最主要的两个操作就是构建和部署。
+
+构建上，需要使用Dockerfile，我们可以控制好COPY的精度来最大化利用镜像的layer机制进行缓存，提高构建的速度。
+
+部署上，我们利用`docker push`和`docker pull`来移动镜像，使用DockerCompose来自动化启动多个容器。
+
+此外，有2个重要工具：
+
+1. vloume/bind-mount，用于文件的共享/持久化，前者将文件在宿主机的情况交由docker托管，而后者需要手动管理；
+2. network，利用网络，使得不同的容器间、容器与宿主机间进行通信；
+
+这两个工具是容器和外界进行通信的重要方式。
+
+## 遗留问题
+
+### RUN和CMD的区别
+
+参考官方文档：[https://docs.docker.com/engine/reference/builder/](https://docs.docker.com/engine/reference/builder/)
+
+`RUN`是在构建阶段运行的指令，而`CMD`是运行阶段运行的**默认**指令。即前者在`docker build`的时候生效，而后者在`docker run`的时候生效。
+
+关于`CMD`，一个Dockerfile只有最后一个`CMD`会生效，并且`docker run`指令最后的参数可以覆盖掉它（这可能也是我们在`docker run -it ubuntu`的时候后面跟不跟`bash`效果都一样的原因）。
+
+并且还有一个和`CMD`类似的命令`ENTRYPOINT`，如果一个镜像指定了`ENTRYPOINT`，那么`CMD`的内容（无论是Dockerfile中的CMD还是用户输入的）将作为参数传递给`ENTRYPOINT`。`ENTRYPOINT`只能通过`--entrypoint`在启动时覆盖。
+
+所以`ENTRYPOINT`有两种用法，一种是将镜像包装成一个应用，这样只需要传递参数，比较方便，一种就是编写一个脚本，这个脚本完成一些需要在运行阶段进行的初始化工作，然后将传入的参数作为命令来执行。
+
+
+### WORKDIR有什么作用
+
+参考官方文档：[https://docs.docker.com/engine/reference/builder/#workdir](https://docs.docker.com/engine/reference/builder/#workdir)
+
+相当于在容器内执行`cd`，只不过如果目录不存在，会自动创建。
