finish checking and labeling part

--- a/k8s/markdowns/0711.md
+++ b/k8s/markdowns/0711.md
@@ -207,6 +207,179 @@ http://127.0.0.1:8001/api/v1/namespaces/default/pods/${NAME}
 我们不仅可以看到这个pod的metadata，还有其spec（规约）和status，我们之前的学习知道它们分别代表了pod的期望状态和实际状态。
 
 
+## 查看应用
 
+当一个pod运行起来之后，我们可能需要查看这个pod的状态/日志，这是我们手动定位/处理错误所必须的手段。
+
+* kubectl get - 列出资源
+* kubectl describe - 显示有关资源的详细信息
+* kubectl logs - 打印 pod 和其中容器的日志
+* kubectl exec - 在 pod 中的容器上执行命令
+
+前三个都是相对比较简单的，在后面加上需要查看的资源即可。资源可以包括（括号内为缩写，这里列出的不全）：
+
+* all
+* pod（po）
+* service（svc）
+* deployment（deploy）
+
+
+
+
+`kubectl exec`比较复杂，但其用法和`docker exec`有些相像：
+
+```powershell
+kubectl exec (POD | TYPE/NAME) [-c CONTAINER] [flags] -- COMMAND [args...] [options]
+```
+
+一些示例：
+
+1. 一次性执行，查看环境变量：
+
+```powershell
+kubectl exec kubernetes-bootcamp-xxxx -- env
+```
+
+2. 交互式执行：
+
+```powershell
+kubectl exec -it kubernetes-bootcamp-xxxx -- bash
+```
+
+## 使用Service将应用暴露到公网
+
+Service（服务）是一个抽象概念，它定义了一个由pods组成的逻辑集合，同时定义了访问它们的协议。
+
+我们通常用YAML文件来描述一个服务。在服务的spec（规约）中，我们可以通过`type`属性指定其工作的方式：
+
+* ClusterIP (默认) - 在集群的内部 IP 上公开 Service 。这种类型使得 Service 只能从集群内访问。
+* NodePort - 使用 NAT 在集群中每个选定 Node 的相同端口上公开 Service 。使用`<NodeIP>:<NodePort>`从集群外部访问 Service。是 ClusterIP 的超集。
+* LoadBalancer - 在当前云中创建一个外部负载均衡器(如果支持的话)，并为 Service 分配一个固定的外部IP。是 NodePort 的超集。
+* ExternalName - 通过返回带有该名称的 CNAME 记录，使用任意名称(由 spec 中的externalName指定)公开 Service。不使用代理。这种类型需要kube-dns的v1.7或更高版本。
+
+我们使用以下命令来启动一个Service，这个Service将我们之前创建的`deployment`暴露到minikube的8080端口中：
+
+```powershell
+kubectl expose deployment/kubernetes-bootcamp --type="NodePort" --port 8080
+```
+
+通过`kubectl get services`可以看到多了一个叫做`kubernetes-bootcamp`的服务，并且其端口号情况为`8080:31761/TCP`，意思应该是将deployment中的8080端口映射到service的这个node的71761端口。
+
+此时端口被映射到了node中，为了在我们的电脑上访问，我们还需要进行一次转发：
+
+```
+minikube service kubernetes-bootcamp
+```
+
+然后打开访问的URL：
+
+<img src="./images/service-success.png" style="zoom: 60%">
+
+## 使用标签
+
+通过`kubectl describe`指令我们可以看到我们启动的deployment有一个标签`app=kubernetes-bootcamp`：
+
+```powershell
+PS D:\xxx\Learning> kubectl describe deploy kubernetes-bootcamp
+Name:                   kubernetes-bootcamp
+Namespace:              default
+CreationTimestamp:      Sun, 11 Jul 2021 21:33:56 +0800
+Labels:                 app=kubernetes-bootcamp
+Annotations:            deployment.kubernetes.io/revision: 1
+Selector:               app=kubernetes-bootcamp
+Replicas:               1 desired | 1 updated | 1 total | 1 available | 0 unavailable
+StrategyType:           RollingUpdate
+MinReadySeconds:        0
+RollingUpdateStrategy:  25% max unavailable, 25% max surge
+Pod Template:
+  Labels:  app=kubernetes-bootcamp
+  Containers:
+   kubernetes-bootcamp:
+    Image:        hhitzhl/kubernetes-bootcamp
+    Port:         <none>
+    Host Port:    <none>
+    Environment:  <none>
+    Mounts:       <none>
+  Volumes:        <none>
+Conditions:
+  Type           Status  Reason
+  ----           ------  ------
+  Available      True    MinimumReplicasAvailable
+  Progressing    True    NewReplicaSetAvailable
+OldReplicaSets:  <none>
+NewReplicaSet:   kubernetes-bootcamp-69b8fbf65b (1/1 replicas created)
+Events:
+  Type    Reason             Age   From                   Message
+  ----    ------             ----  ----                   -------
+  Normal  ScalingReplicaSet  12m   deployment-controller  Scaled up replica set kubernetes-bootcamp-69b8fbf65b to 1
+```
+
+我们之前的学习了解到，标签是一个键值对，在我们启动的这个deployment中，`app`为键，`kubernetes-bootcamp`为值。
+
+
+
+在使用get命令时，我们可以通过`-l`选项来指定标签的筛选规则：
+
+```powershell
+kubectl get svc -l app=kubenetes-bootcamp
+```
+
+相比于不加`-l`选项，经过筛选的结果少了一个启动时默认的服务`kubenetes`。
+
+我们可以通过以下命令来添加标签：
+
+```powershell
+kubectl label <TYPE> <NAME> <KEY_1>=<VAL_1> <KEY_2>=<VAL_2> ...
+```
+
+比如通过如下指令为我们启动的deployment添加一个`version=v1`的标签：
+
+```powershell
+kubectl label deploy kubernetes-bootcamp version=v1
+```
+
+再通过`kubectl describe`来查看的时候就会发现多了一个标签：
+
+```powershell
+PS D:\桌面\杂项\学习资料\2020~2021-3\Learning> kubectl describe deploy kubernetes-bootcamp        
+Name:                   kubernetes-bootcamp
+Namespace:              default
+CreationTimestamp:      Sun, 11 Jul 2021 21:33:56 +0800
+Labels:                 app=kubernetes-bootcamp
+                        version=v1
+Annotations:            deployment.kubernetes.io/revision: 1
+Selector:               app=kubernetes-bootcamp
+Replicas:               1 desired | 1 updated | 1 total | 1 available | 0 unavailable
+StrategyType:           RollingUpdate
+MinReadySeconds:        0
+RollingUpdateStrategy:  25% max unavailable, 25% max surge
+Pod Template:
+  Labels:  app=kubernetes-bootcamp
+  Containers:
+   kubernetes-bootcamp:
+    Image:        hhitzhl/kubernetes-bootcamp
+    Port:         <none>
+    Host Port:    <none>
+    Environment:  <none>
+    Mounts:       <none>
+  Volumes:        <none>
+Conditions:
+  Type           Status  Reason
+  ----           ------  ------
+  Available      True    MinimumReplicasAvailable
+  Progressing    True    NewReplicaSetAvailable
+OldReplicaSets:  <none>
+NewReplicaSet:   kubernetes-bootcamp-69b8fbf65b (1/1 replicas created)
+Events:
+  Type    Reason             Age   From                   Message
+  ----    ------             ----  ----                   -------
+  Normal  ScalingReplicaSet  28m   deployment-controller  Scaled up replica set kubernetes-bootcamp-69b8fbf65b to 1
+```
+
+利用这一点，我们就可以方便地停止我们所创建的deployment、service：
+
+```powershell
+kubectl delete po,svc -l app=kubernetes-bootcamp
+```
 
 
