--- a/k8s/markdowns/0711.md
+++ b/k8s/markdowns/0711.md
@@ -382,4 +382,124 @@ Events:
 kubectl delete po,svc -l app=kubernetes-bootcamp
 ```
 
+## 水平伸缩
+
+启动了deployment和service后，输入`kubectl get rs`可以看到如下信息：
+
+```powershell
+PS D:\xxx\Learning> kubectl get rs
+NAME                             DESIRED   CURRENT   READY   AGE
+kubernetes-bootcamp-69b8fbf65b   1         1         1       21m
+```
+
+其中`DESIRED`表示期望能够运行多少个`pods`实例，而`CURRENT`表示实际上当前已经启动的实例数目，`READY`表示已经启动并且处于可用状态的实力数量。若我们想增加实例数目，只需要修改`DESIRED`数量即可：
+
+```powershell
+kubectl scale deployments/kubernetes-bootcamp --replicas=4
+```
+
+我们趁实例还没进入可用状态，快速通过`kubectl get rs`、`kubectl get pods`查看信息：
+
+```powershell
+PS D:\xxx\Learning> kubectl get pods                                             
+NAME                                   READY   STATUS              RESTARTS   AGE
+kubernetes-bootcamp-69b8fbf65b-frk7w   1/1     Running             0          24m
+kubernetes-bootcamp-69b8fbf65b-qcldn   0/1     ContainerCreating   0          1s
+kubernetes-bootcamp-69b8fbf65b-vzmr7   0/1     ContainerCreating   0          1s
+kubernetes-bootcamp-69b8fbf65b-w54hq   0/1     ContainerCreating   0          1s
+PS D:\xxx\Learning> kubectl get rs                                               
+NAME                             DESIRED   CURRENT   READY   AGE
+kubernetes-bootcamp-69b8fbf65b   4         4         1       24m
+PS D:\xxx\Learning> kubectl get pods
+NAME                                   READY   STATUS              RESTARTS   AGE
+kubernetes-bootcamp-69b8fbf65b-frk7w   1/1     Running             0          24m
+kubernetes-bootcamp-69b8fbf65b-qcldn   0/1     ContainerCreating   0          7s
+kubernetes-bootcamp-69b8fbf65b-vzmr7   1/1     Running             0          7s
+kubernetes-bootcamp-69b8fbf65b-w54hq   0/1     ContainerCreating   0          7s
+PS D:\xxx\Learning> kubectl get rs  
+NAME                             DESIRED   CURRENT   READY   AGE
+kubernetes-bootcamp-69b8fbf65b   4         4         4       24m
+```
+
+通过`kubectl get pods -o wide`我们可以查看更多的信息：
+
+```powershell
+PS D:\xxx\Learning> kubectl get pods -o wide
+NAME                                   READY   STATUS    RESTARTS   AGE     IP           NODE       NOMINATED NODE   READINESS GATES
+kubernetes-bootcamp-69b8fbf65b-frk7w   1/1     Running   0          27m     172.17.0.5   minikube   <none>  
+         <none>
+kubernetes-bootcamp-69b8fbf65b-qcldn   1/1     Running   0          2m45s   172.17.0.7   minikube   <none>  
+         <none>
+kubernetes-bootcamp-69b8fbf65b-vzmr7   1/1     Running   0          2m45s   172.17.0.6   minikube   <none>  
+         <none>
+kubernetes-bootcamp-69b8fbf65b-w54hq   1/1     Running   0          2m45s   172.17.0.8   minikube   <none>  
+         <none>
+```
+
+可以看到，启动的这几个`pods`都被分配到了同一个节点，但是拥有不同的IP。
+
+通过`kubectl describe pods kubernetes-bootcamp`查看详细信息可以看到：
+
+```powershell
+PS D:\xxx\Learning> kubectl describe deployments/kubernetes-bootcamp
+Name:                   kubernetes-bootcamp
+Namespace:              default
+CreationTimestamp:      Sun, 11 Jul 2021 22:15:42 +0800
+Labels:                 app=kubernetes-bootcamp
+Annotations:            deployment.kubernetes.io/revision: 1
+Selector:               app=kubernetes-bootcamp
+Replicas:               4 desired | 4 updated | 4 total | 4 available | 0 unavailable
+StrategyType:           RollingUpdate
+MinReadySeconds:        0
+RollingUpdateStrategy:  25% max unavailable, 25% max surge
+Pod Template:
+  Labels:  app=kubernetes-bootcamp
+  Containers:
+   kubernetes-bootcamp:
+    Image:        hhitzhl/kubernetes-bootcamp
+    Port:         <none>
+    Host Port:    <none>
+    Environment:  <none>
+    Mounts:       <none>
+  Volumes:        <none>
+Conditions:
+  Type           Status  Reason
+  ----           ------  ------
+  Progressing    True    NewReplicaSetAvailable
+  Available      True    MinimumReplicasAvailable
+OldReplicaSets:  <none>
+NewReplicaSet:   kubernetes-bootcamp-69b8fbf65b (4/4 replicas created)
+Events:
+  Type    Reason             Age    From                   Message
+  ----    ------             ----   ----                   -------
+  Normal  ScalingReplicaSet  30m    deployment-controller  Scaled up replica set kubernetes-bootcamp-69b8fbf65b to 1
+  Normal  ScalingReplicaSet  6m19s  deployment-controller  Scaled up replica set kubernetes-bootcamp-69b8fbf65b to 4
+```
+
+`Replicas`中记录了`kubectl get rs`中展示的信息，`Events`中记录了我们将实力数量调整为4的事件。
+
+通过`minikube service kubernetes-bootcamp`将其转发到我们的机器上后，用不同的http客户端（浏览器/Postman/curl）打开，可以发现不同客户端的请求被分配到了不同的`pods`实例中。
+
+但是同一个客户端连续请求将会被转发到同一个实例中，最开始我以为是浏览器的缓存问题，但是在浏览器禁用缓存/使用Postman的连续请求仍旧使用的是同一个实例，但是间隔一段时间就可能会变成不同的实例。
+
+通过`kubectl scale`将期望实例数目削减到2，然后查看情况：
+
+```powershell
+PS D:\xxx\Learning> kubectl scale deployments/kubernetes-bootcamp --replicas=2   
+deployment.apps/kubernetes-bootcamp scaled
+PS D:\xxx\Learning> kubectl get deploy                                           
+NAME                  READY   UP-TO-DATE   AVAILABLE   AGE
+kubernetes-bootcamp   2/2     2            2           50m
+PS D:\xxx\Learning> kubectl get rs                                               
+NAME                             DESIRED   CURRENT   READY   AGE
+kubernetes-bootcamp-69b8fbf65b   2         2         2       50m
+PS D:\xxx\Learning> kubectl get po -o wide                                       
+NAME                                   READY   STATUS        RESTARTS   AGE   IP           NODE       NOMINATED NODE   READINESS GATES
+kubernetes-bootcamp-69b8fbf65b-frk7w   1/1     Running       0          50m   172.17.0.5   minikube   <none>           <none>
+kubernetes-bootcamp-69b8fbf65b-qcldn   1/1     Terminating   0          26m   172.17.0.7   minikube   <none>           <none>
+kubernetes-bootcamp-69b8fbf65b-vzmr7   1/1     Running       0          26m   172.17.0.6   minikube   <none>           <none>
+kubernetes-bootcamp-69b8fbf65b-w54hq   1/1     Terminating   0          26m   172.17.0.8   minikube   <none>           <none>
+```
+
+可以看到有两个实例进入了`Terminating`状态，一段时间后`get po`就看不到这两个实例了。
 
