--- a/k8s/markdowns/0711.md
+++ b/k8s/markdowns/0711.md
@@ -503,3 +503,151 @@ kubernetes-bootcamp-69b8fbf65b-w54hq   1/1     Terminating   0          26m   17
 
 可以看到有两个实例进入了`Terminating`状态，一段时间后`get po`就看不到这两个实例了。
 
+
+## 更新与回滚
+
+在有多个实例的时候，k8s会进行滚动更新，会有一部分实例进入不可用状态，以进行更新，这样会保证始终有可用实例提供服务。每一步更新的实例数默认为1，也可以设置为某个数值或者百分比，每次更新的实例数量越多，更新速度越快，但是更新期间的性能损失越大。
+
+在k8s中，更新时经过版本控制的，任何 Deployment 更新都可以恢复到以前的（稳定）版本。
+
+先将pods实例恢复为4，然后通过以下命令为我们已经启动的depolyments指定新的镜像：
+
+```powershell
+kubectl set image deployments/kubernetes-bootcamp kubernetes-bootcamp=jocatalin/kubernetes-bootcamp:v2
+```
+
+然后马上查看其状态：
+
+```powershell
+PS D:\xxx\Learning\k8s\markdowns> kubectl set image deployments/kubernetes-bootcamp kubernetes-bootcamp=jocatalin/kubernetes-bootcamp:v2
+deployment.apps/kubernetes-bootcamp image updated
+PS D:\xxx\Learning> kubectl get po
+NAME                                   READY   STATUS              RESTARTS   AGE
+kubernetes-bootcamp-69b8fbf65b-2xhsn   1/1     Running             0          109s
+kubernetes-bootcamp-69b8fbf65b-frk7w   1/1     Running             0          78m
+kubernetes-bootcamp-69b8fbf65b-vzmr7   1/1     Running             0          54m
+kubernetes-bootcamp-69b8fbf65b-x6rp6   1/1     Terminating         0          109s
+kubernetes-bootcamp-6dbb8c9d8b-dcrkb   0/1     ContainerCreating   0          11s
+kubernetes-bootcamp-6dbb8c9d8b-m2vz6   0/1     ContainerCreating   0          11s
+PS D:\xxx\Learning> kubectl get po
+NAME                                   READY   STATUS              RESTARTS   AGE
+kubernetes-bootcamp-69b8fbf65b-2xhsn   1/1     Terminating         0          2m4s
+kubernetes-bootcamp-69b8fbf65b-frk7w   1/1     Running             0          78m
+kubernetes-bootcamp-69b8fbf65b-vzmr7   1/1     Running             0          54m
+kubernetes-bootcamp-69b8fbf65b-x6rp6   1/1     Terminating         0          2m4s
+kubernetes-bootcamp-6dbb8c9d8b-dcrkb   0/1     ContainerCreating   0          26s
+kubernetes-bootcamp-6dbb8c9d8b-gnmln   0/1     ContainerCreating   0          2s
+kubernetes-bootcamp-6dbb8c9d8b-m2vz6   1/1     Running             0          26s
+PS D:\xxx\Learning> kubectl get po
+NAME                                   READY   STATUS        RESTARTS   AGE
+kubernetes-bootcamp-69b8fbf65b-2xhsn   1/1     Terminating   0          2m15s
+kubernetes-bootcamp-69b8fbf65b-frk7w   1/1     Terminating   0          78m
+kubernetes-bootcamp-69b8fbf65b-vzmr7   1/1     Terminating   0          54m
+kubernetes-bootcamp-6dbb8c9d8b-5cljf   1/1     Running       0          10s
+kubernetes-bootcamp-6dbb8c9d8b-dcrkb   1/1     Running       0          37s
+kubernetes-bootcamp-6dbb8c9d8b-gnmln   1/1     Running       0          13s
+kubernetes-bootcamp-6dbb8c9d8b-m2vz6   1/1     Running       0          37s
+PS D:\xxx\Learning> kubectl get po
+NAME                                   READY   STATUS    RESTARTS   AGE
+kubernetes-bootcamp-6dbb8c9d8b-5cljf   1/1     Running   0          96s
+kubernetes-bootcamp-6dbb8c9d8b-dcrkb   1/1     Running   0          2m3s
+kubernetes-bootcamp-6dbb8c9d8b-gnmln   1/1     Running   0          99s
+kubernetes-bootcamp-6dbb8c9d8b-m2vz6   1/1     Running   0          2m3s
+```
+
+可以看到这个滚动更新的过程，始终有3个实例在运行（当更新错误的时候，比如镜像无法拉取到，似乎会一直卡在这个状态）。
+
+此时再通过`minikube service`转发并查看（如果之前没关，并不需要重新启动），可以看到现在的信息已经被更新了（之前是`v=1`，现在是`v=2`）：
+
+<img src="./images/update-success.png" style="zoom: 40%">
+
+此时查看服务的情况，`Endpoints`自动更新成了新的实例的IP：
+
+```powershell
+PS D:\xxx\Learning> kubectl describe services/kubernetes-bootcamp
+Name:                     kubernetes-bootcamp
+Namespace:                default
+Labels:                   app=kubernetes-bootcamp
+Annotations:              <none>
+Selector:                 app=kubernetes-bootcamp
+Type:                     NodePort
+IP Families:              <none>
+IP:                       10.100.166.67
+IPs:                      10.100.166.67
+Port:                     <unset>  8080/TCP
+TargetPort:               8080/TCP
+NodePort:                 <unset>  31087/TCP
+Endpoints:                172.17.0.10:8080,172.17.0.11:8080,172.17.0.12:8080 + 1 more...
+Session Affinity:         None
+External Traffic Policy:  Cluster
+Events:                   <none>
+PS D:\xxx\Learning> kubectl get pods -o wide
+NAME                                   READY   STATUS    RESTARTS   AGE     IP            NODE       NOMINATED NODE   READINESS GATES
+kubernetes-bootcamp-6dbb8c9d8b-5cljf   1/1     Running   0          7m39s   172.17.0.12   minikube   <none> 
+          <none>
+kubernetes-bootcamp-6dbb8c9d8b-dcrkb   1/1     Running   0          8m6s    172.17.0.10   minikube   <none> 
+          <none>
+kubernetes-bootcamp-6dbb8c9d8b-gnmln   1/1     Running   0          7m42s   172.17.0.11   minikube   <none> 
+          <none>
+kubernetes-bootcamp-6dbb8c9d8b-m2vz6   1/1     Running   0          8m6s    172.17.0.9    minikube   <none> 
+          <none>
+```
+
+我们还可以通过以下指令来确认滚动更新已经完成：
+
+```powershell
+kubectl rollout status deploy/kubernetes-bootcamp
+```
+
+通过以下指令可以进行回滚：
+
+```powershell
+kubectl rollout undo deployments/kubernetes-bootcamp
+```
+
+```powershell
+PS D:\桌面\杂项\学习资料\2020~2021-3\Learning> kubectl rollout status deploy/kubernetes-bootcamp
+deployment "kubernetes-bootcamp" successfully rolled out
+PS D:\桌面\杂项\学习资料\2020~2021-3\Learning> kubectl rollout undo deployments/kubernetes-bootcamp
+deployment.apps/kubernetes-bootcamp rolled back
+PS D:\桌面\杂项\学习资料\2020~2021-3\Learning> kubectl get pods        
+NAME                                   READY   STATUS              RESTARTS   AGE
+kubernetes-bootcamp-69b8fbf65b-b66p8   1/1     Running             0          12s
+kubernetes-bootcamp-69b8fbf65b-cncrl   0/1     ContainerCreating   0          4s
+kubernetes-bootcamp-69b8fbf65b-n8fgr   0/1     ContainerCreating   0          1s
+kubernetes-bootcamp-69b8fbf65b-wn8sq   1/1     Running             0          12s
+kubernetes-bootcamp-6dbb8c9d8b-5cljf   1/1     Terminating         0          15m
+kubernetes-bootcamp-6dbb8c9d8b-dcrkb   1/1     Terminating         0          15m
+kubernetes-bootcamp-6dbb8c9d8b-gnmln   1/1     Terminating         0          15m
+kubernetes-bootcamp-6dbb8c9d8b-m2vz6   1/1     Running             0          15m
+PS D:\桌面\杂项\学习资料\2020~2021-3\Learning> kubectl get pods
+NAME                                   READY   STATUS              RESTARTS   AGE
+kubernetes-bootcamp-69b8fbf65b-b66p8   1/1     Running             0          15s
+kubernetes-bootcamp-69b8fbf65b-cncrl   1/1     Running             0          7s
+kubernetes-bootcamp-69b8fbf65b-n8fgr   0/1     ContainerCreating   0          4s
+kubernetes-bootcamp-69b8fbf65b-wn8sq   1/1     Running             0          15s
+kubernetes-bootcamp-6dbb8c9d8b-5cljf   1/1     Terminating         0          15m
+kubernetes-bootcamp-6dbb8c9d8b-dcrkb   1/1     Terminating         0          15m
+kubernetes-bootcamp-6dbb8c9d8b-gnmln   1/1     Terminating         0          15m
+kubernetes-bootcamp-6dbb8c9d8b-m2vz6   1/1     Terminating         0          15m
+PS D:\桌面\杂项\学习资料\2020~2021-3\Learning> kubectl get pods -o wide
+NAME                                   READY   STATUS        RESTARTS   AGE   IP            NODE       NOMINATED NODE   READINESS GATES
+kubernetes-bootcamp-69b8fbf65b-b66p8   1/1     Running       0          27s   172.17.0.6    minikube   <none>           <none>
+kubernetes-bootcamp-69b8fbf65b-cncrl   1/1     Running       0          19s   172.17.0.7    minikube   <none>           <none>
+kubernetes-bootcamp-69b8fbf65b-n8fgr   1/1     Running       0          16s   172.17.0.8    minikube   <none>           <none>
+kubernetes-bootcamp-69b8fbf65b-wn8sq   1/1     Running       0          27s   172.17.0.5    minikube   <none>           <none>
+kubernetes-bootcamp-6dbb8c9d8b-5cljf   1/1     Terminating   0          15m   172.17.0.12   minikube   <none>           <none>
+kubernetes-bootcamp-6dbb8c9d8b-dcrkb   1/1     Terminating   0          15m   172.17.0.10   minikube   <none>           <none>
+kubernetes-bootcamp-6dbb8c9d8b-gnmln   1/1     Terminating   0          15m   172.17.0.11   minikube   <none>           <none>
+kubernetes-bootcamp-6dbb8c9d8b-m2vz6   1/1     Terminating   0          15m   172.17.0.9    minikube   <none>           <none>
+```
+
+相比于更新，回滚的速度还是蛮快的，可能是因为不需要从远程仓库中拉取镜像的原因。
+
+
+此时再通过`minikube service`转发并查看（如果之前没关，并不需要重新启动），可以看到现在的信息已经恢复了（由`v=2`变回了`v=1`）：
+
+<img src="./images/rollback-success.png" style="zoom: 40%">
+
+
+
