--- a/k8s/markdowns/0711.md
+++ b/k8s/markdowns/0711.md
@@ -1,11 +1,11 @@
-# Kubernetes学习日记（一）
+# Kubernetes学习日记（二）
 
 暑期加入了沃天宇老师的实验室进行暑期的实习。在正式开始工作之前，师兄先让我了解一下技术栈，需要了解的有docker、k8s、springboot、springcloud。
 
 谨以一系列博客记录一下自己学习的笔记。更多内容见[Github](https://github.com/SnowPhoenix0105/BackEndLearning)
 
 
-2021/7/7
+2021/7/11
 
 ## 部署应用
 
@@ -649,5 +649,15 @@ kubernetes-bootcamp-6dbb8c9d8b-m2vz6   1/1     Terminating   0          15m   17
 
 <img src="./images/rollback-success.png" style="zoom: 40%">
 
+
+## 总结
+
+前面的docker用来创建容器，而k8s则用来批量管理容器。
+
+我们了解了k8s的基本结构，主要有2个部分，一个是控制面板，另一个是kubelet管理的一个个节点，前者负责总体的控制，后者是实际运行业务的部分。和这两个部分平行的还有一个云服务提供商。
+
+在使用上，我们利用kubectl工具，进行了deployment的创建，然后将其暴露为service，进行了水平的伸缩操作，进行了滚动更新/回退，完成了k8s的基本操作。
+
+k8s官网的教程还没有结束，我粗略看了一下，后面开始结合微服务了，所以等后面学习springboot、springcloud的时候再回来继续。
 
 
