--- a/k8s/markdowns/0712.md
+++ b/k8s/markdowns/0712.md
@@ -7,7 +7,7 @@
 
 2021/7/13
 
-今天学长让我尝试写一下Chronograf的配置文件。
+今天师兄让我尝试写一下Chronograf的配置文件。
 
 ## 参考资料
 
@@ -87,6 +87,8 @@ spec:
 ```
 
 resources.limits是我随便写的，因为不写vscode会报warning。
+
+通过指定`imagePullPolicy: IfNotPresent`，使得本地有镜像的时候不必重新拉取。
 
 通过指定了`PORT`和`INFLUXDB_URL`两个环境变量，分别实现了更改端口、指定influxdb的url，然后将容器的8081端口暴露出来。
 
