fix a bug for markdown

--- a/springboot/markdown/0720.md
+++ b/springboot/markdown/0720.md
@@ -22,7 +22,7 @@
 
 ### 实现
 
-代码见Github：[https://github.com/SnowPhoenix0105/BackEndLearning/tree/main/springboot/exp2](https://github.com/SnowPhoenix0105/BackEndLearning/tree/main/springboot/exp2)。
+代码见：[../exp2](../exp2)。
 
 找到了一篇和我期望的功能类似的博客：[https://blog.csdn.net/weixin_34242819/article/details/91889372](https://blog.csdn.net/weixin_34242819/article/details/91889372)。
 
